saving changes made to api

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="row">
             <aside class="col-md-3">
                 <h3>Search for a city</h3>
-                <form class="form-inline">
-                    <input class="form-control mr-sm-2" id="search-input" type="search" pleaceholder="search"/>
+            <!-- <form class="form-inline"> -->
+                    <input class="form-control mr-sm-2" id="search-input" type="text" placeholder="search"/>
                     <button class="btn my-1 my-sm-2 bg-primary text-white" id="search-button" type="submit"></button>
-                </form>
+                <!-- </form> -->
                 <br>
-                <div class="card" style = "">
+                <div class="card">
                     <ul class="list-group list-group-flush" id="search-history"></ul>
                 </div>
             </aside>
