pushing changes to script.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="card-text">
-                        <h6>Temp: <span id="setTemp"></span></h6>
+                        <h6>Temp: <span class="currentTemp"></span></h6>
                         <h6>Wind: <span id="setWind"></span></h6>
                         <h6>Humidity: <span id="setHumidity"></span></h6>
                         <h6>UV Index: <span id="setUvIndex"></span></h6>
