updated code to append content

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         </div>
                     </div>
                     <div class="card-text">
-                        <h6>Temp: <span class="currentTemp"></span></h6>
-                        <h6>Wind: <span id="setWind"></span></h6>
-                        <h6>Humidity: <span id="setHumidity"></span></h6>
-                        <h6>UV Index: <span id="setUvIndex"></span></h6>
+                        <h6>Temp: <span id="current-temp"></span></h6>
+                        <h6>Wind: <span id="set-wind"></span></h6>
+                        <h6>Humidity: <span id="set-humidity"></span></h6>
+                        <h6>UV Index: <span id="set-uvindex"></span></h6>
                     </div>
                 </div>
             </div>
