saving updates to code

--- a/index.html
+++ b/index.html
@@ -51,31 +51,32 @@
                     <div class="col-lg-2">
                         <div class="card">
                             <div class="card-body">
-                                <h1 class="card-title">Monday</h1>
-                                <div class="tempMonday">Temp: </div>
-                                <div class="windMonday">Wind: </div>
-                                <div class="humMonday">Humidity: </div>
+                                <h4 class="card-title">Monday</h4>
+                                <img src="" id="icon-monday">
+                                <div id="current-monday">Temp: </div>
+                                <div id="wind-monday">Wind: </div>
+                                <div id="hum-monday">Humidity: </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="card">
                             <div class="card-body">
-                                <h1 class="card-title">Tuesday</h1>
-                                <div class="tempTuesday">Temp: </div>
-                                <div class="windTuesday">Wind: </div>
-                                <div class="humTuesday">Humidity: </div>
+                                <h4 class="card-title">Tuesday</h4>
+                                <div id="current-tuesday">Temp: </div>
+                                <div id="wind-tuesday">Wind: </div>
+                                <div id="hum-tuesday">Humidity: </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="card">
                             <div class="card-body">
-                                <h1 class="card-title">Wednesday</h1>
+                                <h4 class="card-title">Wednesday</h4>
                                 <!--icon-->
-                                <div class="tempWednesday">Temp: </div>
-                                <div class="windWednesday">Wind: </div>
-                                <div class="humWednesday">Humidity: </div>
+                                <div id="current-wednesday">Temp: </div>
+                                <div id="wind-wednesday">Wind: </div>
+                                <div id="hum-wednesday">Humidity: </div>
 
 
                             </div>
@@ -84,20 +85,20 @@
                     <div class="col-lg-2">
                         <div class="card">
                             <div class="card-body">
-                                <h1 class="card-title">Thursday</h1>
-                                <div class="tempThursday">Temp: </div>
-                                <div class="windThursday">Wind: </div>
-                                <div class="humThursday">Humidity: </div>
+                                <h4 class="card-title">Thursday</h4>
+                                <div id="current-thursday">Temp: </div>
+                                <div id="wind-thursday">Wind: </div>
+                                <div id="hum-thursday">Humidity: </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="card">
                             <div class="card-body">
-                                <h1 class="card-title">Friday</h1>
-                                <div class="tempFriday">Temp: </div>
-                                <div class="windFriday">Wind: </div>
-                                <div class="humFriday">Humidity: </div>
+                                <h4 class="card-title">Friday</h4>
+                                <div id="current-friday">Temp: </div>
+                                <div id="wind-friday">Wind: </div>
+                                <div id="hum-friday">Humidity: </div>
                             </div>
                         </div>
                     </div>
