added code for icons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                             </div>
                         </div>
                         <div class="card-text">
+                            <h3> <span id="current-city-name"></span></h3>
+                            <img src="" id="icon-current">
                             <h6>Temp: <span id="current-temp"></span></h6>
                             <h6>Wind: <span id="set-wind"></span></h6>
                             <h6>Humidity: <span id="set-humidity"></span></h6>
@@ -63,6 +65,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Tuesday</h4>
+                                <img src="" id="icon-tuesday">
                                 <div id="current-tuesday">Temp: </div>
                                 <div id="wind-tuesday">Wind: </div>
                                 <div id="hum-tuesday">Humidity: </div>
@@ -73,8 +76,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Wednesday</h4>
-                                <!--icon-->
-                                <div id="current-wednesday">Temp: </div>
+                                <img src="" id="icon-wednesday">                                <div id="current-wednesday">Temp: </div>
                                 <div id="wind-wednesday">Wind: </div>
                                 <div id="hum-wednesday">Humidity: </div>
 
@@ -86,6 +88,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Thursday</h4>
+                                <img src="" id="icon-thursday">
                                 <div id="current-thursday">Temp: </div>
                                 <div id="wind-thursday">Wind: </div>
                                 <div id="hum-thursday">Humidity: </div>
@@ -96,6 +99,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Friday</h4>
+                                <img src="" id="icon-friday">
                                 <div id="current-friday">Temp: </div>
                                 <div id="wind-friday">Wind: </div>
                                 <div id="hum-friday">Humidity: </div>
